--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="canonical" href="https://leticiacarvalho.studio" />
     <title>Letícia Carvalho Studio</title>
     <style>
       html {
@@ -15,6 +16,23 @@
         min-height: 100% !important;
         background-color: #487582;
       }
+    </style>
+     <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "image": "https://leticiacarvalho.studio/img/logo.png",
+      "url": "https://leticiacarvalho.studio",
+      "sameAs": [
+         "https://www.leticiacarvalho.studio", 
+         "https://www.leticia.studio", 
+         "https://leticia.studio"
+       ],
+      "logo": "https://leticiacarvalho.studio/img/logo.png",
+      "name": "Letícia Carvalho Studio",
+      "description": "Restoration, Conservation and Art"
+    }
+    </script>
   </head>
   <body></body>
 </html>
