--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="canonical" href="https://leticiacarvalho.studio" />
     <title>Letícia Carvalho Studio</title>
+    <meta name="description">Restoration, Conservation and Art</description>
     <style>
       html {
         height: 100% !important;
