feat: adds logo

--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
     <meta name="description" content="Restoration, Conservation and Art" />
     <style>
       html {
+        user-select: none;
+        margin: 0 !important;
         height: 100% !important;
         min-height: 100% !important;
       }
       body {
+        margin: 0 !important;
         height: 100% !important;
         min-height: 100% !important;
         background-color: #487582;
+        user-select: none;
+      }
+      .logo {
+        width: 30%;
+        height: auto;
+        user-select: none;
+        pointer-events: none;
       }
     </style>
      <script type="application/ld+json">
@@ -35,5 +45,9 @@
     }
     </script>
   </head>
-  <body></body>
+  <body>
+    <center>
+      <img src="img/logo.png" class="logo" />
+    </center>
+  </body>
 </html>
