--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <center>
-      <img src="img/logo.png" class="logo" />
+      <img src="img/logo.png" class="logo" width="30%" height="auto" alt="Letícia Carvalho Studio - Restoration, Conservation and Art" />
     </center>
   </body>
 </html>
