--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="canonical" href="https://leticiacarvalho.studio" />
     <title>Letícia Carvalho Studio</title>
-    <meta name="description" content="Restoration, Conservation and Art" />
+    <meta name="description" content="Restauração, Conservação &amp; Arte" />
     <style>
       html {
         user-select: none;
@@ -41,7 +41,7 @@
        ],
       "logo": "https://leticiacarvalho.studio/img/logo.png",
       "name": "Letícia Carvalho Studio",
-      "description": "Restoration, Conservation and Art"
+      "description": "Restauração, Conservação & Arte"
     }
     </script>
   </head>
