--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="canonical" href="https://leticiacarvalho.studio" />
     <title>Letícia Carvalho Studio</title>
     <meta name="description" content="Restauração, Conservação &amp; Arte" />
+    <meta name="og:image" content="/img/social.png" />
     <style>
       html {
         user-select: none;
@@ -48,6 +49,9 @@
   <body>
     <center>
       <img src="img/logo.png" class="logo" width="30%" height="auto" alt="Letícia Carvalho Studio - Restoration, Conservation and Art" />
+      <br />
+      <br />
+      <img src="img/tagline.png" class="logo" width="30%" height="auto" alt="Letícia Carvalho Studio - Restoration, Conservation and Art" />
     </center>
   </body>
 </html>
