--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="canonical" href="https://leticiacarvalho.studio" />
+    
+    <!-- HTML Meta Tags -->
     <title>Letícia Carvalho Studio</title>
-    <meta name="description" content="Restauração, Conservação &amp; Arte" />
-    <meta name="og:image" content="/img/social.png" />
+    <meta name="description" content="Restauração, Conservação & Arte">
+  
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://leticiacarvalho.studio/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Letícia Carvalho Studio">
+    <meta property="og:description" content="Restauração, Conservação & Arte">
+    <meta property="og:image" content="https://leticiacarvalho.studio/img/social.png">
+  
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="leticiacarvalho.studio">
+    <meta property="twitter:url" content="https://leticiacarvalho.studio/">
+    <meta name="twitter:title" content="Letícia Carvalho Studio">
+    <meta name="twitter:description" content="Restauração, Conservação & Arte">
+    <meta name="twitter:image" content="https://leticiacarvalho.studio/img/social.png">
+    
     <style>
       html {
         user-select: none;
@@ -33,7 +50,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "image": "https://leticiacarvalho.studio/img/logo.png",
+      "image": "https://leticiacarvalho.studio/img/social.png",
       "url": "https://leticiacarvalho.studio",
       "sameAs": [
          "https://www.leticiacarvalho.studio", 
